Fixed dialog z-index

--- a/base/css/admin.css
+++ b/base/css/admin.css
@@ -644,7 +644,7 @@
 }
 .so-widgets-dialog .so-widgets-dialog-overlay {
   position: fixed;
-  z-index: 100000;
+  z-index: 500000;
   top: 0;
   left: 0;
   right: 0;
